[package]
name = "brstm-looper-web"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
brstm = "0.4.2"
ffmpeg-next = { version = "7.1.0", features = ["codec", "format", "software-resampling"], default-features = false }
futures-util = "0.3.31"
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.38.0", features = ["rt-multi-thread", "net", "macros", "sync", "time", "io-util", "fs", "process", "signal"] }
tower-http = { version = "0.6.2", features = ["compression-full", "mime", "trace", "cors"] }
tracing = "=0.1.40"
tracing-subscriber = "0.3.19"
